lab2/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> blocks
Rule 2     blocks -> blocks block
Rule 3     blocks -> <empty>
Rule 4     block -> declaration
Rule 5     block -> fundef
Rule 6     block -> instruction
Rule 7     declarations -> declarations declaration
Rule 8     declarations -> <empty>
Rule 9     declaration -> TYPE inits ;
Rule 10    declaration -> error ;
Rule 11    inits -> inits , init
Rule 12    inits -> init
Rule 13    init -> ID = expression
Rule 14    instructions_opt -> instructions
Rule 15    instructions_opt -> <empty>
Rule 16    instructions -> instructions instruction
Rule 17    instructions -> instruction
Rule 18    instruction -> print_instr
Rule 19    instruction -> labeled_instr
Rule 20    instruction -> assignment
Rule 21    instruction -> choice_instr
Rule 22    instruction -> while_instr
Rule 23    instruction -> repeat_instr
Rule 24    instruction -> return_instr
Rule 25    instruction -> break_instr
Rule 26    instruction -> continue_instr
Rule 27    instruction -> compound_instr
Rule 28    instruction -> expression ;
Rule 29    print_instr -> PRINT expr_list ;
Rule 30    print_instr -> PRINT error ;
Rule 31    labeled_instr -> ID : instruction
Rule 32    assignment -> ID = expression ;
Rule 33    choice_instr -> IF ( condition ) instruction
Rule 34    choice_instr -> IF ( condition ) instruction ELSE instruction
Rule 35    choice_instr -> IF ( error ) instruction
Rule 36    choice_instr -> IF ( error ) instruction ELSE instruction
Rule 37    while_instr -> WHILE ( condition ) instruction
Rule 38    while_instr -> WHILE ( error ) instruction
Rule 39    repeat_instr -> REPEAT instructions UNTIL condition ;
Rule 40    return_instr -> RETURN expression ;
Rule 41    continue_instr -> CONTINUE ;
Rule 42    break_instr -> BREAK ;
Rule 43    compound_instr -> { declarations instructions_opt }
Rule 44    condition -> expression
Rule 45    const -> INTEGER
Rule 46    const -> FLOAT
Rule 47    const -> STRING
Rule 48    expression -> const
Rule 49    expression -> ID
Rule 50    expression -> expression + expression
Rule 51    expression -> expression - expression
Rule 52    expression -> expression * expression
Rule 53    expression -> expression / expression
Rule 54    expression -> expression % expression
Rule 55    expression -> expression | expression
Rule 56    expression -> expression & expression
Rule 57    expression -> expression ^ expression
Rule 58    expression -> expression AND expression
Rule 59    expression -> expression OR expression
Rule 60    expression -> expression SHL expression
Rule 61    expression -> expression SHR expression
Rule 62    expression -> expression EQ expression
Rule 63    expression -> expression NEQ expression
Rule 64    expression -> expression > expression
Rule 65    expression -> expression < expression
Rule 66    expression -> expression LE expression
Rule 67    expression -> expression GE expression
Rule 68    expression -> ( expression )
Rule 69    expression -> ( error )
Rule 70    expression -> ID ( expr_list_or_empty )
Rule 71    expression -> ID ( error )
Rule 72    expr_list_or_empty -> expr_list
Rule 73    expr_list_or_empty -> <empty>
Rule 74    expr_list -> expr_list , expression
Rule 75    expr_list -> expression
Rule 76    fundef -> TYPE ID ( args_list_or_empty ) compound_instr
Rule 77    args_list_or_empty -> args_list
Rule 78    args_list_or_empty -> <empty>
Rule 79    args_list -> args_list , arg
Rule 80    args_list -> arg
Rule 81    arg -> TYPE ID

Terminals, with rules where they appear

%                    : 54
&                    : 56
(                    : 33 34 35 36 37 38 68 69 70 71 76
)                    : 33 34 35 36 37 38 68 69 70 71 76
*                    : 52
+                    : 50
,                    : 11 74 79
-                    : 51
/                    : 53
:                    : 31
;                    : 9 10 28 29 30 32 39 40 41 42
<                    : 65
=                    : 13 32
>                    : 64
AND                  : 58
BREAK                : 42
CONTINUE             : 41
ELSE                 : 34 36
EQ                   : 62
FLOAT                : 46
GE                   : 67
ID                   : 13 31 32 49 70 71 76 81
IF                   : 33 34 35 36
INTEGER              : 45
LE                   : 66
NEQ                  : 63
OR                   : 59
PRINT                : 29 30
REPEAT               : 39
RETURN               : 40
SHL                  : 60
SHR                  : 61
STRING               : 47
TYPE                 : 9 76 81
UNTIL                : 39
WHILE                : 37 38
^                    : 57
error                : 10 30 35 36 38 69 71
{                    : 43
|                    : 55
}                    : 43

Nonterminals, with rules where they appear

arg                  : 79 80
args_list            : 77 79
args_list_or_empty   : 76
assignment           : 20
block                : 2
blocks               : 1 2
break_instr          : 25
choice_instr         : 21
compound_instr       : 27 76
condition            : 33 34 37 39
const                : 48
continue_instr       : 26
declaration          : 4 7
declarations         : 7 43
expr_list            : 29 72 74
expr_list_or_empty   : 70
expression           : 13 28 32 40 44 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 63 64 64 65 65 66 66 67 67 68 74 75
fundef               : 5
init                 : 11 12
inits                : 9 11
instruction          : 6 16 17 31 33 34 34 35 36 36 37 38
instructions         : 14 16 39
instructions_opt     : 43
labeled_instr        : 19
print_instr          : 18
program              : 0
repeat_instr         : 23
return_instr         : 24
while_instr          : 22

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . blocks
    (2) blocks -> . blocks block
    (3) blocks -> .

    TYPE            reduce using rule 3 (blocks -> .)
    error           reduce using rule 3 (blocks -> .)
    PRINT           reduce using rule 3 (blocks -> .)
    ID              reduce using rule 3 (blocks -> .)
    IF              reduce using rule 3 (blocks -> .)
    WHILE           reduce using rule 3 (blocks -> .)
    REPEAT          reduce using rule 3 (blocks -> .)
    RETURN          reduce using rule 3 (blocks -> .)
    BREAK           reduce using rule 3 (blocks -> .)
    CONTINUE        reduce using rule 3 (blocks -> .)
    {               reduce using rule 3 (blocks -> .)
    (               reduce using rule 3 (blocks -> .)
    INTEGER         reduce using rule 3 (blocks -> .)
    FLOAT           reduce using rule 3 (blocks -> .)
    STRING          reduce using rule 3 (blocks -> .)
    $end            reduce using rule 3 (blocks -> .)

    program                        shift and go to state 1
    blocks                         shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> blocks .
    (2) blocks -> blocks . block
    (4) block -> . declaration
    (5) block -> . fundef
    (6) block -> . instruction
    (9) declaration -> . TYPE inits ;
    (10) declaration -> . error ;
    (76) fundef -> . TYPE ID ( args_list_or_empty ) compound_instr
    (18) instruction -> . print_instr
    (19) instruction -> . labeled_instr
    (20) instruction -> . assignment
    (21) instruction -> . choice_instr
    (22) instruction -> . while_instr
    (23) instruction -> . repeat_instr
    (24) instruction -> . return_instr
    (25) instruction -> . break_instr
    (26) instruction -> . continue_instr
    (27) instruction -> . compound_instr
    (28) instruction -> . expression ;
    (29) print_instr -> . PRINT expr_list ;
    (30) print_instr -> . PRINT error ;
    (31) labeled_instr -> . ID : instruction
    (32) assignment -> . ID = expression ;
    (33) choice_instr -> . IF ( condition ) instruction
    (34) choice_instr -> . IF ( condition ) instruction ELSE instruction
    (35) choice_instr -> . IF ( error ) instruction
    (36) choice_instr -> . IF ( error ) instruction ELSE instruction
    (37) while_instr -> . WHILE ( condition ) instruction
    (38) while_instr -> . WHILE ( error ) instruction
    (39) repeat_instr -> . REPEAT instructions UNTIL condition ;
    (40) return_instr -> . RETURN expression ;
    (42) break_instr -> . BREAK ;
    (41) continue_instr -> . CONTINUE ;
    (43) compound_instr -> . { declarations instructions_opt }
    (48) expression -> . const
    (49) expression -> . ID
    (50) expression -> . expression + expression
    (51) expression -> . expression - expression
    (52) expression -> . expression * expression
    (53) expression -> . expression / expression
    (54) expression -> . expression % expression
    (55) expression -> . expression | expression
    (56) expression -> . expression & expression
    (57) expression -> . expression ^ expression
    (58) expression -> . expression AND expression
    (59) expression -> . expression OR expression
    (60) expression -> . expression SHL expression
    (61) expression -> . expression SHR expression
    (62) expression -> . expression EQ expression
    (63) expression -> . expression NEQ expression
    (64) expression -> . expression > expression
    (65) expression -> . expression < expression
    (66) expression -> . expression LE expression
    (67) expression -> . expression GE expression
    (68) expression -> . ( expression )
    (69) expression -> . ( error )
    (70) expression -> . ID ( expr_list_or_empty )
    (71) expression -> . ID ( error )
    (45) const -> . INTEGER
    (46) const -> . FLOAT
    (47) const -> . STRING

    $end            reduce using rule 1 (program -> blocks .)
    TYPE            shift and go to state 12
    error           shift and go to state 18
    PRINT           shift and go to state 6
    ID              shift and go to state 5
    IF              shift and go to state 26
    WHILE           shift and go to state 15
    REPEAT          shift and go to state 13
    RETURN          shift and go to state 23
    BREAK           shift and go to state 7
    CONTINUE        shift and go to state 25
    {               shift and go to state 33
    (               shift and go to state 16
    INTEGER         shift and go to state 32
    FLOAT           shift and go to state 29
    STRING          shift and go to state 17

    expression                     shift and go to state 3
    assignment                     shift and go to state 4
    continue_instr                 shift and go to state 19
    return_instr                   shift and go to state 30
    compound_instr                 shift and go to state 20
    while_instr                    shift and go to state 9
    instruction                    shift and go to state 22
    print_instr                    shift and go to state 8
    fundef                         shift and go to state 24
    break_instr                    shift and go to state 10
    choice_instr                   shift and go to state 28
    declaration                    shift and go to state 21
    repeat_instr                   shift and go to state 31
    labeled_instr                  shift and go to state 11
    block                          shift and go to state 14
    const                          shift and go to state 27

state 3

    (28) instruction -> expression . ;
    (50) expression -> expression . + expression
    (51) expression -> expression . - expression
    (52) expression -> expression . * expression
    (53) expression -> expression . / expression
    (54) expression -> expression . % expression
    (55) expression -> expression . | expression
    (56) expression -> expression . & expression
    (57) expression -> expression . ^ expression
    (58) expression -> expression . AND expression
    (59) expression -> expression . OR expression
    (60) expression -> expression . SHL expression
    (61) expression -> expression . SHR expression
    (62) expression -> expression . EQ expression
    (63) expression -> expression . NEQ expression
    (64) expression -> expression . > expression
    (65) expression -> expression . < expression
    (66) expression -> expression . LE expression
    (67) expression -> expression . GE expression

    ;               shift and go to state 51
    +               shift and go to state 34
    -               shift and go to state 37
    *               shift and go to state 43
    /               shift and go to state 35
    %               shift and go to state 39
    |               shift and go to state 49
    &               shift and go to state 40
    ^               shift and go to state 38
    AND             shift and go to state 48
    OR              shift and go to state 36
    SHL             shift and go to state 47
    SHR             shift and go to state 41
    EQ              shift and go to state 44
    NEQ             shift and go to state 52
    >               shift and go to state 50
    <               shift and go to state 42
    LE              shift and go to state 45
    GE              shift and go to state 46


state 4

    (20) instruction -> assignment .

    TYPE            reduce using rule 20 (instruction -> assignment .)
    error           reduce using rule 20 (instruction -> assignment .)
    PRINT           reduce using rule 20 (instruction -> assignment .)
    ID              reduce using rule 20 (instruction -> assignment .)
    IF              reduce using rule 20 (instruction -> assignment .)
    WHILE           reduce using rule 20 (instruction -> assignment .)
    REPEAT          reduce using rule 20 (instruction -> assignment .)
    RETURN          reduce using rule 20 (instruction -> assignment .)
    BREAK           reduce using rule 20 (instruction -> assignment .)
    CONTINUE        reduce using rule 20 (instruction -> assignment .)
    {               reduce using rule 20 (instruction -> assignment .)
    (               reduce using rule 20 (instruction -> assignment .)
    INTEGER         reduce using rule 20 (instruction -> assignment .)
    FLOAT           reduce using rule 20 (instruction -> assignment .)
    STRING          reduce using rule 20 (instruction -> assignment .)
    $end            reduce using rule 20 (instruction -> assignment .)
    UNTIL           reduce using rule 20 (instruction -> assignment .)
    }               reduce using rule 20 (instruction -> assignment .)
    ELSE            reduce using rule 20 (instruction -> assignment .)


state 5

    (31) labeled_instr -> ID . : instruction
    (32) assignment -> ID . = expression ;
    (49) expression -> ID .
    (70) expression -> ID . ( expr_list_or_empty )
    (71) expression -> ID . ( error )

    :               shift and go to state 53
    =               shift and go to state 55
    ;               reduce using rule 49 (expression -> ID .)
    +               reduce using rule 49 (expression -> ID .)
    -               reduce using rule 49 (expression -> ID .)
    *               reduce using rule 49 (expression -> ID .)
    /               reduce using rule 49 (expression -> ID .)
    %               reduce using rule 49 (expression -> ID .)
    |               reduce using rule 49 (expression -> ID .)
    &               reduce using rule 49 (expression -> ID .)
    ^               reduce using rule 49 (expression -> ID .)
    AND             reduce using rule 49 (expression -> ID .)
    OR              reduce using rule 49 (expression -> ID .)
    SHL             reduce using rule 49 (expression -> ID .)
    SHR             reduce using rule 49 (expression -> ID .)
    EQ              reduce using rule 49 (expression -> ID .)
    NEQ             reduce using rule 49 (expression -> ID .)
    >               reduce using rule 49 (expression -> ID .)
    <               reduce using rule 49 (expression -> ID .)
    LE              reduce using rule 49 (expression -> ID .)
    GE              reduce using rule 49 (expression -> ID .)
    (               shift and go to state 54


state 6

    (29) print_instr -> PRINT . expr_list ;
    (30) print_instr -> PRINT . error ;
    (74) expr_list -> . expr_list , expression
    (75) expr_list -> . expression
    (48) expression -> . const
    (49) expression -> . ID
    (50) expression -> . expression + expression
    (51) expression -> . expression - expression
    (52) expression -> . expression * expression
    (53) expression -> . expression / expression
    (54) expression -> . expression % expression
    (55) expression -> . expression | expression
    (56) expression -> . expression & expression
    (57) expression -> . expression ^ expression
    (58) expression -> . expression AND expression
    (59) expression -> . expression OR expression
    (60) expression -> . expression SHL expression
    (61) expression -> . expression SHR expression
    (62) expression -> . expression EQ expression
    (63) expression -> . expression NEQ expression
    (64) expression -> . expression > expression
    (65) expression -> . expression < expression
    (66) expression -> . expression LE expression
    (67) expression -> . expression GE expression
    (68) expression -> . ( expression )
    (69) expression -> . ( error )
    (70) expression -> . ID ( expr_list_or_empty )
    (71) expression -> . ID ( error )
    (45) const -> . INTEGER
    (46) const -> . FLOAT
    (47) const -> . STRING

    error           shift and go to state 57
    ID              shift and go to state 59
    (               shift and go to state 16
    INTEGER         shift and go to state 32
    FLOAT           shift and go to state 29
    STRING          shift and go to state 17

    expression                     shift and go to state 56
    expr_list                      shift and go to state 58
    const                          shift and go to state 27

state 7

    (42) break_instr -> BREAK . ;

    ;               shift and go to state 60


state 8

    (18) instruction -> print_instr .

    TYPE            reduce using rule 18 (instruction -> print_instr .)
    error           reduce using rule 18 (instruction -> print_instr .)
    PRINT           reduce using rule 18 (instruction -> print_instr .)
    ID              reduce using rule 18 (instruction -> print_instr .)
    IF              reduce using rule 18 (instruction -> print_instr .)
    WHILE           reduce using rule 18 (instruction -> print_instr .)
    REPEAT          reduce using rule 18 (instruction -> print_instr .)
    RETURN          reduce using rule 18 (instruction -> print_instr .)
    BREAK           reduce using rule 18 (instruction -> print_instr .)
    CONTINUE        reduce using rule 18 (instruction -> print_instr .)
    {               reduce using rule 18 (instruction -> print_instr .)
    (               reduce using rule 18 (instruction -> print_instr .)
    INTEGER         reduce using rule 18 (instruction -> print_instr .)
    FLOAT           reduce using rule 18 (instruction -> print_instr .)
    STRING          reduce using rule 18 (instruction -> print_instr .)
    $end            reduce using rule 18 (instruction -> print_instr .)
    UNTIL           reduce using rule 18 (instruction -> print_instr .)
    }               reduce using rule 18 (instruction -> print_instr .)
    ELSE            reduce using rule 18 (instruction -> print_instr .)


state 9

    (22) instruction -> while_instr .

    TYPE            reduce using rule 22 (instruction -> while_instr .)
    error           reduce using rule 22 (instruction -> while_instr .)
    PRINT           reduce using rule 22 (instruction -> while_instr .)
    ID              reduce using rule 22 (instruction -> while_instr .)
    IF              reduce using rule 22 (instruction -> while_instr .)
    WHILE           reduce using rule 22 (instruction -> while_instr .)
    REPEAT          reduce using rule 22 (instruction -> while_instr .)
    RETURN          reduce using rule 22 (instruction -> while_instr .)
    BREAK           reduce using rule 22 (instruction -> while_instr .)
    CONTINUE        reduce using rule 22 (instruction -> while_instr .)
    {               reduce using rule 22 (instruction -> while_instr .)
    (               reduce using rule 22 (instruction -> while_instr .)
    INTEGER         reduce using rule 22 (instruction -> while_instr .)
    FLOAT           reduce using rule 22 (instruction -> while_instr .)
    STRING          reduce using rule 22 (instruction -> while_instr .)
    $end            reduce using rule 22 (instruction -> while_instr .)
    UNTIL           reduce using rule 22 (instruction -> while_instr .)
    }               reduce using rule 22 (instruction -> while_instr .)
    ELSE            reduce using rule 22 (instruction -> while_instr .)


state 10

    (25) instruction -> break_instr .

    TYPE            reduce using rule 25 (instruction -> break_instr .)
    error           reduce using rule 25 (instruction -> break_instr .)
    PRINT           reduce using rule 25 (instruction -> break_instr .)
    ID              reduce using rule 25 (instruction -> break_instr .)
    IF              reduce using rule 25 (instruction -> break_instr .)
    WHILE           reduce using rule 25 (instruction -> break_instr .)
    REPEAT          reduce using rule 25 (instruction -> break_instr .)
    RETURN          reduce using rule 25 (instruction -> break_instr .)
    BREAK           reduce using rule 25 (instruction -> break_instr .)
    CONTINUE        reduce using rule 25 (instruction -> break_instr .)
    {               reduce using rule 25 (instruction -> break_instr .)
    (               reduce using rule 25 (instruction -> break_instr .)
    INTEGER         reduce using rule 25 (instruction -> break_instr .)
    FLOAT           reduce using rule 25 (instruction -> break_instr .)
    STRING          reduce using rule 25 (instruction -> break_instr .)
    $end            reduce using rule 25 (instruction -> break_instr .)
    UNTIL           reduce using rule 25 (instruction -> break_instr .)
    }               reduce using rule 25 (instruction -> break_instr .)
    ELSE            reduce using rule 25 (instruction -> break_instr .)


state 11

    (19) instruction -> labeled_instr .

    TYPE            reduce using rule 19 (instruction -> labeled_instr .)
    error           reduce using rule 19 (instruction -> labeled_instr .)
    PRINT           reduce using rule 19 (instruction -> labeled_instr .)
    ID              reduce using rule 19 (instruction -> labeled_instr .)
    IF              reduce using rule 19 (instruction -> labeled_instr .)
    WHILE           reduce using rule 19 (instruction -> labeled_instr .)
    REPEAT          reduce using rule 19 (instruction -> labeled_instr .)
    RETURN          reduce using rule 19 (instruction -> labeled_instr .)
    BREAK           reduce using rule 19 (instruction -> labeled_instr .)
    CONTINUE        reduce using rule 19 (instruction -> labeled_instr .)
    {               reduce using rule 19 (instruction -> labeled_instr .)
    (               reduce using rule 19 (instruction -> labeled_instr .)
    INTEGER         reduce using rule 19 (instruction -> labeled_instr .)
    FLOAT           reduce using rule 19 (instruction -> labeled_instr .)
    STRING          reduce using rule 19 (instruction -> labeled_instr .)
    $end            reduce using rule 19 (instruction -> labeled_instr .)
    UNTIL           reduce using rule 19 (instruction -> labeled_instr .)
    }               reduce using rule 19 (instruction -> labeled_instr .)
    ELSE            reduce using rule 19 (instruction -> labeled_instr .)


state 12

    (9) declaration -> TYPE . inits ;
    (76) fundef -> TYPE . ID ( args_list_or_empty ) compound_instr
    (11) inits -> . inits , init
    (12) inits -> . init
    (13) init -> . ID = expression

    ID              shift and go to state 61

    init                           shift and go to state 63
    inits                          shift and go to state 62

state 13

    (39) repeat_instr -> REPEAT . instructions UNTIL condition ;
    (16) instructions -> . instructions instruction
    (17) instructions -> . instruction
    (18) instruction -> . print_instr
    (19) instruction -> . labeled_instr
    (20) instruction -> . assignment
    (21) instruction -> . choice_instr
    (22) instruction -> . while_instr
    (23) instruction -> . repeat_instr
    (24) instruction -> . return_instr
    (25) instruction -> . break_instr
    (26) instruction -> . continue_instr
    (27) instruction -> . compound_instr
    (28) instruction -> . expression ;
    (29) print_instr -> . PRINT expr_list ;
    (30) print_instr -> . PRINT error ;
    (31) labeled_instr -> . ID : instruction
    (32) assignment -> . ID = expression ;
    (33) choice_instr -> . IF ( condition ) instruction
    (34) choice_instr -> . IF ( condition ) instruction ELSE instruction
    (35) choice_instr -> . IF ( error ) instruction
    (36) choice_instr -> . IF ( error ) instruction ELSE instruction
    (37) while_instr -> . WHILE ( condition ) instruction
    (38) while_instr -> . WHILE ( error ) instruction
    (39) repeat_instr -> . REPEAT instructions UNTIL condition ;
    (40) return_instr -> . RETURN expression ;
    (42) break_instr -> . BREAK ;
    (41) continue_instr -> . CONTINUE ;
    (43) compound_instr -> . { declarations instructions_opt }
    (48) expression -> . const
    (49) expression -> . ID
    (50) expression -> . expression + expression
    (51) expression -> . expression - expression
    (52) expression -> . expression * expression
    (53) expression -> . expression / expression
    (54) expression -> . expression % expression
    (55) expression -> . expression | expression
    (56) expression -> . expression & expression
    (57) expression -> . expression ^ expression
    (58) expression -> . expression AND expression
    (59) expression -> . expression OR expression
    (60) expression -> . expression SHL expression
    (61) expression -> . expression SHR expression
    (62) expression -> . expression EQ expression
    (63) expression -> . expression NEQ expression
    (64) expression -> . expression > expression
    (65) expression -> . expression < expression
    (66) expression -> . expression LE expression
    (67) expression -> . expression GE expression
    (68) expression -> . ( expression )
    (69) expression -> . ( error )
    (70) expression -> . ID ( expr_list_or_empty )
    (71) expression -> . ID ( error )
    (45) const -> . INTEGER
    (46) const -> . FLOAT
    (47) const -> . STRING
